// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom default render renders correctly 1`] = `
<div class="ais-ToggleRefinement">
  <a class>
    <span>
      free_shipping
    </span>
    <span>
      (is disabled)
    </span>
  </a>
</div>
`;

exports[`custom default render renders correctly with a URL for the href 1`] = `
<div class="ais-ToggleRefinement">
  <a class
     href="/free-shipping"
  >
    <span>
      free_shipping
    </span>
    <span>
      (is disabled)
    </span>
  </a>
</div>
`;

exports[`custom default render renders correctly with the value selected 1`] = `
<div class="ais-ToggleRefinement">
  <a class>
    <span>
      free_shipping
    </span>
    <span>
      (is enabled)
    </span>
  </a>
</div>
`;

exports[`custom default render renders correctly without refinement 1`] = `
<div class="ais-ToggleRefinement ais-ToggleRefinement--noRefinement">
  <a class="noRefinement">
    <span>
      free_shipping
    </span>
    <span>
      (is disabled)
    </span>
  </a>
</div>
`;
